# calculator-kata

./: .gitignore  README.md  benchmark.md  calculator.go  calculator_bench_test.go  calculator_test.go  go.mod  main.go
calculator/: calculator.go  calculator_bench_test.go  calculator_test.go
calculator/rpn/: rpn.go
calculator/testdata/: 100k  10k  1k  1m
cmd/calc/: main.go
cmd/generate/: README.md
generator/: main.go
internal/parser/: parser.go
internal/rpn/: rpn.go
internal/scanner/: scanner.go  scanner_test.go
internal/stack/: stack.go  stack_test.go
internal/token/: token.go
lexer/: lexer.go  lexer_test.go
rpn/: rpn.go  rpn_test.go
solutions/go/ast/: calculator.go  calculator_test.go
solutions/go/ast/internal/ast/: ast.go
solutions/go/ast/internal/parser/: parser_test.go
solutions/go/rpn/: calculator.go  go.sum
solutions/go/rpn/internal/rpn/: rpn.go  rpn_test.go
solutions/go/rpn/internal/scanner/: scanner.go
solutions/python/: profile_app.py  pyproject.toml
solutions/python/calculator/: __main__.py  evaluator.py  scanner.py  test_evaluator.py  test_scanner.py
solutions/rust/: .gitignore  Cargo.toml
solutions/rust/src/: main.rs  token.rs
src/: error.rs  lib.rs  scanner.rs
stack/: stack.go  stack_test.go
testdata/: 100k  10k  1k  1m
token/: token.go
