[tool.poetry]
name = "calucator-kata"
version = "0.1.0"
description = ""
authors = ["Alexander Metzner"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
